# cleaner_robot

./: CMakeLists.txt  License  README.md  package.xml
include/: cleanerBot.hpp
launch/: runNodes.launch
results/: cppcheck_output.txt  cpplint_output.txt
src/: cleanerBot.cpp  main.cpp
